# predator-prey-dynamics

./: .gitignore  Makefile  README.md  auc-lang.py  auc.py  canvas3.js  cpp_simulation  evolution.py  index.html  lang-outputs.txt  plot.py  run_simulation.py  run_simulation.sh  sketch_assignment.js  style.css  unix.py  visualize.js
assignment2/: LICENSE  unix.py  (+2 more)
project/: CMakeLists.txt  Makefile  README.md  cpp_simulation  evolution.py  evolution_results.txt  index.html  jsconfig.json  main.cpp  main_new.cpp  run_simulation.sh  simulation.js  sketch_project.js  visualize.js
project/results/baseline/: log-evolution-baseline-100f_2023-06-18_21-38-44.txt  log-evolution-baseline-100f_2023-06-18_22-13-31.txt  log-evolution-baseline-100f_2023-06-18_23-36-16.txt  log-evolution-baseline-100f_2023-06-19_00-18-18.txt  log-evolution-baseline-200f_2023-06-18_20-46-06.txt  log-evolution-baseline-200f_2023-06-19_00-53-12.txt  log-evolution-baseline-200f_2023-06-19_10-07-28.txt  log-evolution-baseline-400f_2023-06-19_12-13-59.txt  overview.txt
project/results/food/: log-evolution-food-0.0001-100f_2023-06-20_21-39-06.txt  log-evolution-food-0.0001-200f_2023-06-20_01-24-34.txt  log-evolution-food-0.0001-200f_2023-06-20_12-31-45.txt  log-evolution-food-0.001-100f_2023-06-20_19-49-16.txt  log-evolution-food-0.001-200f_2023-06-20_00-12-32.txt  log-evolution-food-0.001-200f_2023-06-20_11-37-58.txt  log-evolution-food-0.001-200f_colab3.txt  log-evolution-food-0.001-400f_colab2.txt  log-evolution-food-0.01-100f_2023-06-20_20-35-29.txt  log-evolution-food-0.01-200f_2023-06-20_11-54-58.txt  (+2 more)
(+231 files in other folders)
